Adding error model and preview feature